--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
   row-gap: 1.5%;
   column-gap: 3.5%;
   padding: 5%;
-
+  height: 100%;
 }
 .loader-container{
     display: flex;
@@ -13,8 +13,9 @@
     width: 100%;
 }
 .btn-container{
-
-
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
   .btn-custom{
     width: 50%;
     padding: 1rem;
@@ -23,6 +24,7 @@
     border: none;
     outline: none;
     color:#fff;
-    margin: 1rem 0 0 0;
+    border-radius: 8px;
+    cursor: pointer;
   }
 }
